--- a/.github/workflows/devsecops-workflow.yaml
+++ b/.github/workflows/devsecops-workflow.yaml
@@ -20,7 +20,7 @@ jobs:
       with:
         args: >
           -Dsonar.organization=nodeproject
-          -Dsonar.projectKey=node
+          -Dsonar.projectKey=nodeproject
   security:
     runs-on: ubuntu-latest
     needs: build
